# vei

./: .env.example  .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  full_enron_manual.yml  nightly_release.yml
data/enron/: enron_case_event_register.json  (+2 more)
docs/: AGENT_ONBOARDING.md  ARCHITECTURE.md  BENCHMARKS.md  DISCOVER_PREDICTIVE_FEATURES.md  ENRON_BUSINESS_OUTCOME_BENCHMARK.md  ENRON_CASEBOOK.md  ENRON_DATASET.md  EVALS.md  NEWS_EXAMPLE.md  NEXT_PHASE_PLAN.md  OPUS_REVIEW_BRIEF.md  OVERVIEW.md  PRESENTATION_TALK_TRACK.md  RL_GYM.md  ROSETTA_SOURCE.md  SERVICE_OPS_WALKTHROUGH.md  STUDIO_UX_ROLLOUT.md  WHATIF.md
scripts/: build_dispatch_local_example.py  build_enron_business_state_example.py  build_enron_example_bundles.py  build_enron_macro_outcome_table.py  build_enron_rosetta.py  build_enron_rosetta_sample.py  build_news_world_model_snapshot.py  build_public_history_demo_fixture.py  build_service_ops_example_bundles.py  capture_enron_bundle_screenshots.py  check_import_boundaries.py  check_rosetta_archive.py  check_tenant_world_model.py  clean_workspace.py  enron_example_specs.py  export_public_history_static_assets.py  fetch_enron_full_dataset.py  find_enron_candidate_events.py  generate_enron_macro_calibration_report.py  mypy_targets.txt  package_enron_full_dataset_release.py  package_enron_master_agreement_example.py  prepare_enron_public_context.py  render_enron_timeline_asset.py  run_enron_flagship_proof_pass.py  run_local_security_checks.py  train_reference_backend_on_enron.py  validate_enron_example_bundles.py  validate_service_ops_example_bundles.py  validate_whatif_artifacts.py
tests/: README.md  conftest.py  test_anonymize.py  test_bench_and_surfaces.py  test_benchmark_api.py  test_blueprint_api.py  test_canonical_history_stitching.py  test_capability_graph_actions.py  test_clean_workspace.py  test_connectors_runtime.py  test_context_hydrate.py  test_context_normalize.py  test_context_providers.py  test_control_plane_twins.py  test_critical_decision_benchmark.py  test_dataset_api.py  test_dispatch_local_example.py  test_ejepa_runtime_contract.py  test_enron_case_register.py  test_enron_example_bundle.py  test_enron_full_dataset_fetch.py  test_enron_lfs_policy.py  test_enron_public_context_fixture.py  test_enron_saved_bundles.py  test_exercise_api.py  test_grounding_api.py  test_import_connectors.py  test_imports_api.py  test_ingest.py  test_knowledge_api.py  test_knowledge_authoring_family.py  test_knowledge_cli.py  test_llm_providers.py  test_local_security_checks.py  test_mcp_discoverability_tools.py  test_multitenant_world_model_benchmark.py  test_news_state_points.py  test_orientation_api.py  test_pilot_api.py  test_playable.py  (+44 more)
tools/: git_dependency_smoke.sh
vei/: score_frontier.py  whatif_filenames.py
(+639 files in other folders)
