[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvei"
version = "0.3.0"
description = "VEI — programmable replica of an enterprise software stack for agent testing, RL training, and operational simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "VEI", email = "noreply@example.com" }
]
dependencies = [
  "mcp>=1.13.0",
  "python-multipart>=0.0.26",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "fastapi>=0.115.0",
  "pyarrow>=23.0.0",
  "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/Strange-Lab-AI/vei"
Repository = "https://github.com/Strange-Lab-AI/vei"

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0",
  "Pillow>=10.4.0",
]
dev = [
  "black==26.3.1",
  "ruff==0.6.8",
  "mypy==1.11.2",
  "bandit==1.7.9",
  "detect-secrets==1.5.0",
  "pip-audit==2.7.3",
  "semgrep>=1.90.0",
  "pandas>=2.2.3",
  "Pygments>=2.20.0",
  "pre-commit==4.4.0",
]
sse = [
  "uvicorn>=0.30.0"
]
ui = [
  "uvicorn>=0.30.0"
]
llm = [
  "openai>=1.55.0",
  "python-dotenv>=1.0.0",
  "anthropic>=0.87.0",
  "cryptography>=46.0.7",
  "google-genai>=0.3.0",
]
rl = [
  "gymnasium>=0.29.0"
]
worldmodel = [
  "numpy>=1.26.0",
  "pandas>=2.2.3",
  "torch>=2.4.0",
]
jepa = [
  "numpy>=1.26.0",
  "pandas>=2.2.3",
  "torch>=2.4.0",
]
test = [
  "anyio>=4.0",
  "hypothesis==6.151.14",
  "pytest==9.0.3",
  "pytest-timeout==2.4.0",
  "pytest-cov==7.0.0",
  "pytest-xdist>=3.5",
]

[project.scripts]
vei = "vei.cli.vei:app"

[tool.black]
target-version = ["py311"]

[tool.coverage.run]
omit = [
  # benchmark_bridge.py wraps the heavy training runtime and is covered through
  # tests/dynamics instead of line-level unit coverage.
  "vei/whatif/benchmark_bridge.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "anyio: run async tests with anyio/asyncio event loop",
  "timeout: per-test timeout (requires pytest-timeout if enforcement needed)",
  "unit: fast, isolated unit tests (no external deps)",
  "integration: tests requiring CLI runners, subprocess calls, or complex setup",
  "slow: tests that take a long time to run",
  "hypothesis: property-based tests using the Hypothesis library",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vei*", "structured_jepa*"]
exclude = []

[tool.setuptools.package-data]
"vei.ui" = ["static/*.html", "static/*.css", "static/*.js", "static/*.svg"]
"vei.imports" = ["fixtures/*/package.json", "fixtures/*/raw/*.csv", "fixtures/*/raw/*.json"]
"vei.whatif" = ["fixtures/*/*.json", "fixtures/*/*.md", "fixtures/*/raw/*.html", "fixtures/*/raw/*.pdf"]
